syntax = "proto2";

package qcraft;
option go_package = "qcraft-proto.ai/onboard/perception/tracker/tracking_validation/proto/validation";

import "onboard/proto/perception.proto";

message TrackingValidationProto {
  repeated MeasurementsProto measurements = 1;
  repeated ObjectsProto ground_truths = 2;
  repeated ObjectsProto estimators = 3;
}